--- a/challenge-react/public/index.html
+++ b/challenge-react/public/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Tamboon React</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1"
+    />
+    <title>Omise Tamboon React</title>
   </head>
   <body>
     <div id="root"></div>
