feat: add hero images and donation dialog UI (#8)

--- a/challenge-react/public/index.html
+++ b/challenge-react/public/index.html
@@ -2,10 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tamboon React</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <div id="root"></div>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kanit:wght@200;400;700&family=Taviraj:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="/dist/main.js"></script>
   </body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Document</title>
+  </head>
+  <body></body>
 </html>
